# RAG-parrten

./: .gitignore  pyproject.toml
re_ranking_parrten/: docker-compose.yml  llm_adapter.py  main.py  vector_engin.py
re_ranking_parrten/query/: answer1.py  answer2.py  answer3.py  answer4.py  answer5.py
